# marr-hildreth

./: CMakeLists.txt  tiempo_de_ejecucion.ods
article/: ipol.cls  marr-hildreth.tex
source/: 2dconvolution.c  CMakeLists.txt  gaussian_kernel.c  gaussian_kernel.h  test_mh.c
