PROJECT(test_marr_hildreth)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-std=c99")
SET(PROJECT_SOURCE_DIR source)
SET(PROJECT_BINARY_DIR bin)

ADD_SUBDIRECTORY(source)

SET(SRC ${PROJECT_SOURCE_DIR}/test_mh.c)
ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_mh ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_mh png tiff jpeg ${LIBS})

INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_mh RUNTIME DESTINATION bin)
